--- a/CSS/formation.css
+++ b/CSS/formation.css
@@ -17,31 +17,27 @@ body{
     color: #e7c25e;
 }
 
-
 nav{
-    width: 100%;
     background-color: #986705; 
-}
-
-main{
-    max-width: 100%;
-    width: 100%;
-    text-align:center;
-    word-wrap : break-word;
-}
-
-header, footer{
-    text-align: center;
-    color: black;
 }
 
 .myBreadcrumb ol {
     display: flex;
     flex-wrap: wrap;
     list-style: none;
-    margin: 0;
-    padding: 0;
 }
+
+main{
+    text-align:center;
+    word-wrap : break-word;
+}
+
+footer{
+    text-align: center;
+    color: black;
+    background-color: #986705;
+}
+
 
 
 @media screen and (max-width:576px) {
@@ -59,7 +55,13 @@ header, footer{
     
     nav {
         height:10vh;
-        margin-bottom:5%;
+    }
+
+    .navItems{
+        display:flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-content: center;
     }
 
     .navbarSize{
@@ -67,22 +69,15 @@ header, footer{
     }
 
     .myBreadcrumb {
-        height: 10vh;
-        padding: 1rem;
-        font-size: 1.2rem;
+        height: 2vh;
+        padding-left: 1rem;
+        font-size: 0.8rem;
         color: black;
     }
 
-    .myCarousel{
-        height:50vh;
-    }
-
     main{
-        margin-bottom:2rem;
-        margin-right:5rem;
-        margin-left: 5rem;
         line-height:100%;
-        font-size: 0.7rem;
+        font-size: 0.8rem;
     }
 
     h2{
@@ -97,15 +92,11 @@ header, footer{
         font-size: 1rem;
     }
 
-    .imgClass{
-        max-width: 100%;
-        max-height: 100%;
-        width: 3rem;
-        height: 2rem;
+    h2, h3, h5 {
+        padding-top:1.5rem;
     }
 
     footer{
-        padding: 2rem;
         font-size: 0.5rem;
     }
 
@@ -130,68 +121,58 @@ header, footer{
         font-style: oblique; 
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
         color:#e7c25e;
-        font-size:1.4rem;
+        font-size:1.6rem;
     }
 
     nav{
-        border: solid;
         height:20vh;
-        margin-bottom: 10%;
     }
 
-    .flexItems{
-        display: inline-flex;
-        flex-direction: row;
+    .navItems{
+        display:flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
-        align-content: center;
+        gap: 0.2rem 1rem;
     }
 
     .navbarSize{
-        font-size:1.2rem;
+        font-size:1.3rem;
     }
 
     .myBreadcrumb {
+        display:flex;
+        flex-wrap: wrap;
         height: 10vh;
-        padding: 1rem;
-        font-size: 1.2rem;
+        font-size: 1.1rem;
+        padding-left: 2rem;
         color: black;
-    }
-
-    .myCarousel{
-        height:80vh;
     }
 
     main{
         padding-bottom:3rem;
         line-height: 150%;
-        font-size: 1rem;
+        font-size: 1.1rem;
     }
 
     h2{
-        font-size: 1.5rem;
+        font-size: 1.6rem;
     }
 
     h3{
-        font-size: 1.4rem;
+        font-size: 1.5rem;
     }
 
     h5{
-        font-size: 1.2rem;
+        font-size: 1.3rem;
     }
 
     h2, h3, h5 {
-        margin:10%;
-        text-align: center;
-    }
-
-    .imgClass{
-        width: 6rem;
-        height: 6rem;
+        padding-top: 2rem;
+        margin:7%;
     }
 
     footer{
-        padding: 3rem;
+        padding: 2rem;
         font-size: 0.8rem;
     }
 
@@ -214,55 +195,53 @@ header, footer{
         font-style: oblique; 
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
         color:#e7c25e;
-        font-size:2rem;
+        font-size:1.8rem;
     }
 
     nav{
         height:25vh;
     }
 
+    .navItems{
+        display:flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-content: center;
+    }
+
     .navbarSize{
-        font-size:1.6rem;
+        font-size:1.5rem;
     }
 
     .myBreadcrumb {
         height: 10vh;
         padding: 1rem;
-        font-size: 1.2rem;
+        padding-left: 4rem;
+        font-size: 1.1rem;
         color: black;
     }
 
-    .myCarousel{
-        height:100vh;
-    }
-
     main{
-        margin:5rem;
-        padding-bottom: 3rem;
+        padding-bottom: 5rem;
         line-height: 200%;
-        font-size: 1.3rem;
+        font-size: 1.2rem;
     }
 
     h2{
-        font-size: 2rem;
+        font-size: 1.9rem;
     }
 
     h3{
-        font-size: 1.7rem;
+        font-size: 1.6rem;
     }
 
     h5{
-        font-size: 1.5rem;
+        font-size: 1.4rem;
     }
 
     h2,h3,h5{
-        margin: 10%;
-        text-align: center;
-    }
-
-    .imgClass{
-        width: 8rem;
-        height: 8rem;
+        padding-top: 3rem;
+        margin: 5%;
     }
 
     footer{
